# pumpkinmc-plugin-template

./: Cargo.toml
src/: lib.rs
